<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>fr.ign.validator</groupId>
	<artifactId>validator</artifactId>
	<packaging>pom</packaging>
	<version>4.4.5-SNAPSHOT</version>
	<name>Validator</name>

	<scm>
		<url>https://github.com/IGNF/validator</url>
		<tag>HEAD</tag>
		<developerConnection>scm:git:git@github.com:IGNF/validator.git</developerConnection>
	</scm>

	<description>
        This program validates data according to models
	</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>11</java.version>
		<!--
		See following page for the required java version
		http://docs.geotools.org/latest/userguide/build/install/jdk.html#
		 -->
		<geotools.version>27.2</geotools.version>
		<log4j.version>2.21.0</log4j.version>
		<woodstox-core-asl.version>4.4.1</woodstox-core-asl.version>
		<jackson.version>2.15.3</jackson.version>
		<jackson.databind.version>2.15.3</jackson.databind.version>

		<maven-formatter-plugin.version>2.11.0</maven-formatter-plugin.version>
		<jaxen.version>1.2.0</jaxen.version>
		<jdom.version>1.0</jdom.version>
		<apache-common-io.version>2.14.0</apache-common-io.version>
		<apache-common-cli.version>1.5.0</apache-common-cli.version>
		<apache-commons-csv.version>1.10.0</apache-commons-csv.version>
		<apache-commons-lang.version>2.6</apache-commons-lang.version>
		<!-- jaxb -->
		<jaxb-core.version>2.3.0.1</jaxb-core.version>
		<jaxb-impl.version>2.3.9</jaxb-impl.version>
		<jaxb-api.version>2.3.1</jaxb-api.version>
		<!-- JDBC -->
		<postgresql.version>9.1-901-1.jdbc4</postgresql.version>
		<sqlite-jdbc.version>3.43.2.1</sqlite-jdbc.version>
		<!-- Testing -->
		<junit.version>4.13.2</junit.version>
		<jsonassert.version>1.5.1</jsonassert.version>
		<mockito.version>4.11.0</mockito.version>
		<!-- Build and deploy -->
		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
		<!-- JDK 8 features -->
		<javax.annotation.version>1.3.2</javax.annotation.version>
		<javax.activation.version>1.1.1</javax.activation.version>

		<!-- sonarqube -->
		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
	</properties>
	<organization>
		<name>IGN - Service RDS</name>
		<url>http://www.ign.fr</url>
	</organization>

	<developers>
		<developer>
			<name>Clément Bouché</name>
			<email>clement.bouche(at)ign.fr</email>
			<organization>IGN</organization>
		</developer>
		<developer>
			<name>Florian Cerizay</name>
			<email>florian.cerizay(at)ign.fr</email>
			<organization>IGN</organization>
		</developer>
		<developer>
			<name>Mickaël Borne</name>
			<email>mickael.borne(at)ign.fr</email>
			<organization>IGN</organization>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>CeCILL B</name>
			<url>http://cecill.info/licences/Licence_CeCILL-B_V1-fr.html</url>
		</license>
	</licenses>

	<modules>
		<module>validator-core</module>
		<module>validator-cli</module>
		<module>validator-plugin-cnig</module>
		<module>validator-plugin-dgpr</module>
		<module>validator-plugin-pcrs</module>
	</modules>


	<dependencies>
		<!--
		################################################################
			Logging
		################################################################
		-->

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<!-- log4j2 dependency-->
		<dependency>
			<groupId>org.codehaus.woodstox</groupId>
			<artifactId>woodstox-core-asl</artifactId>
			<version>${woodstox-core-asl.version}</version>
		</dependency>

		<!--
		################################################################
			Apache common helpers
		################################################################
		-->

		<!-- List files, read files,... -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${apache-common-io.version}</version>
		</dependency>

		<!-- Command line option parser -->
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>${apache-common-cli.version}</version>
		</dependency>

		<!-- Read/write CSV files -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-csv</artifactId>
			<version>${apache-commons-csv.version}</version>
		</dependency>

		<!-- String helpers -->
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>${apache-commons-lang.version}</version>
		</dependency>

		<!--
		################################################################
			Jackson to read/write JSON
		################################################################
		-->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.databind.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>${jackson.version}</version>
		</dependency>

		<!--
		################################################################
			Spatial libraries (projections and geometries)
		################################################################
		-->

		<!-- JTS throw geotools -->
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-main</artifactId>
			<version>${geotools.version}</version>
		</dependency>

		<!-- geotools epsg references -->
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-referencing</artifactId>
			<version>${geotools.version}</version>
		</dependency>
		<!--
			Embedded database for common CRS
			(with official lat/lon for EPSG:4326)
		-->
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-epsg-hsql</artifactId>
			<version>${geotools.version}</version>
		</dependency>

		<!--
		################################################################
			XML parsing
		################################################################
		-->

		<!-- jdom and jaxen (XPath) are required to parse metadata -->
		<dependency>
			<groupId>jdom</groupId>
			<artifactId>jdom</artifactId>
			<version>${jdom.version}</version>
		</dependency>
		<dependency>
			<groupId>jaxen</groupId>
			<artifactId>jaxen</artifactId>
			<version>${jaxen.version}</version>
		</dependency>

		<!-- JABX is required by XmlModelReader -->
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>${jaxb-api.version}</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-core</artifactId>
			<version>${jaxb-core.version}</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>${jaxb-impl.version}</version>
		</dependency>

		<!--
		################################################################
			JDBC drivers
		################################################################
		-->

		<!-- Driver SQLite -->
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>${sqlite-jdbc.version}</version>
		</dependency>
		<!-- Drive postgresql -->
		<dependency>
			<groupId>postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>${postgresql.version}</version>
		</dependency>

		<!--
		################################################################
			JDK 8 libraries
		################################################################
		-->
		<dependency>
			<groupId>javax.annotation</groupId>
			<artifactId>javax.annotation-api</artifactId>
			<version>${javax.annotation.version}</version>
		</dependency>
		<dependency>
			<groupId>javax.activation</groupId>
			<artifactId>activation</artifactId>
			<version>${javax.activation.version}</version>
		</dependency>

		<!--
		################################################################
			Test dependencies
		################################################################
		-->

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.skyscreamer</groupId>
			<artifactId>jsonassert</artifactId>
			<version>${jsonassert.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<repositories>

		<repository>
			<id>maven</id>
			<name>Maven central repository</name>
			<url>https://repo1.maven.org/maven2/</url>
		</repository>

		<repository>
			<id>osgeo</id>
			<name>OSGeo Release Repository</name>
			<url>https://repo.osgeo.org/repository/release/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>

	</repositories>


	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<useSystemClassLoader>false</useSystemClassLoader>
					<argLine>@{argLine} --illegal-access=permit</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>net.revelc.code.formatter</groupId>
				<artifactId>formatter-maven-plugin</artifactId>
			</plugin>

		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin.version}</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
					</configuration>
				</plugin>

				<!-- mvn release:prepare -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.5.3</version>
					<configuration>
						<tagNameFormat>v@{project.version}</tagNameFormat>
					</configuration>
				</plugin>

				<!-- mvn formatter:format -->
				<plugin>
					<groupId>net.revelc.code.formatter</groupId>
					<artifactId>formatter-maven-plugin</artifactId>
					<version>${maven-formatter-plugin.version}</version>
					<configuration>
						<configFile>${project.parent.basedir}/eclipse/formatter-config.xml</configFile>
					</configuration>
				</plugin>


				<!-- coverage -->
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.11</version>
				</plugin>

			</plugins>
		</pluginManagement>


	</build>

	<profiles>
		<profile>
			<id>coverage</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<executions>
							<execution>
								<id>prepare-agent</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
